--- a/profile.html
+++ b/profile.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Profile</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Grove Profile</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Profile</h1>
-  <p>Username: <span id="profileName"></span></p>
-  <h2>Your Posts</h2>
-  <div id="profilePosts"></div>
+  <header>
+    <h1>Your Profile</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="news.html">News</a>
+      <a href="music.html">Music</a>
+      <a href="admin.html">Admin</a>
+    </nav>
+  </header>
 
-  <script>
-    const username = localStorage.getItem("loggedInUser") || "Guest";
-    document.getElementById("profileName").innerText = username;
+  <main>
+    <section id="profile-stream">
+      <h2>Join Live Stream</h2>
+      <video id="memberStream" autoplay playsinline></video>
+      <button id="joinStream">Join Stream</button>
+    </section>
+    <section id="profile-posts">
+      <h2>Your Posts</h2>
+      <div id="feed"></div>
+      <input type="text" id="newPost" placeholder="Write a post...">
+      <button id="postBtn">Post</button>
+    </section>
+  </main>
 
-    const updates = JSON.parse(localStorage.getItem("updates") || "[]");
-    const profilePostsDiv = document.getElementById("profilePosts");
-
-    const userPosts = updates.filter(u => u.author === username);
-    if(userPosts.length === 0) profilePostsDiv.innerText = "No posts yet.";
-
-    userPosts.forEach(update => {
-      const div = document.createElement("div");
-      div.innerHTML = `
-        <h3>${update.title}</h3>
-        <p>${update.content}</p>
-        <small>Posted: ${update.timestamp}</small>
-        <hr>
-      `;
-      profilePostsDiv.appendChild(div);
-    });
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
