--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Grove Stream</title>
+<title>Live Stream Portal</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Grove</h1>
+    <h1>Live Stream Portal</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="news.html">News</a>
@@ -23,6 +23,7 @@
       <video id="streamVideo" autoplay playsinline></video>
       <button id="joinStream">Join Stream</button>
     </section>
+
     <section id="news-feed">
       <h2>News Feed</h2>
       <div id="feed"></div>
